mbt version 3.2.8 2011-12-20
  * added an option to usage()
  * updated man page accordingly
  * fixed outputmangling 

mbt version 3.2.7 2011-12-20

  * fixed memoryleak problem with multithreading.
  * added a make 'check' target
  * changed output of +v options. Now we are in line with Timbl.
    might breaks some stuff! BUT NOT FROG.
  * small changes to satisfy '-pedantic'

mbt version 3.2.6 2011-08-30

* addded Version() and VersionName() functions to be consistent with the 
  whole Timbl family.
* added -V and --version option to show version
* some internal code reshuffled for -h and -V options
* added an isInit() function to the API
* fixed terrible bug. -vdb option was broken (a long time ago?)
* added a -vc option to insert confidence in the output

mbt version 3.2.5 2011-03-21
- decapped version. so Mbt ==> mbt and Mbtg ==> mbtg, also for libMbt
- fink stuff changed/added

mbt version 3.2.2.99.1, 2010-08-19

- SVN snapshot release.
- Fix reference to header file which breaks build on
  some platforms.


mbt version 3.2.2, 2010-06

-


mbt version 3.2.1, 2010-02-22

- new release 
- one extra features added tot the API. Tadpole likes it.


mbt version 3.1.99.1, 2009-11-23

- SVN snapshot release.
- This release needs timbl >= 6.2.0 for building.


mbt version 3.2.0-pre1, 2009-09-03

- SVN snapshot release.


mbt version 3.1.4, 2009-06-21

[Changes by Joost van Baal]
- init/mbt.in: use user "mbt" (not sloot) for running the daemon
- configure.ac: make sure it compiles with Debian cdbs, which sets CXX
  environment variable.


mbt version 3.1.3, 2009-02-09

- shipped as mbt-3.1.3.tar.gz
[2008-06-01: Ko vd Sloot]
- switched to SVN


mbt version 3.1.2, 2008-03-08

- shipped as mbt-3.1.2.tar.gz
[2008-03-04: Ko vd Sloot]
- getting 3.1.2 out real soon now


mbt version 3.1, 2007-12-12

- shipped as mbt-3.1.tar.gz


mbt version 3.0, 2007-12-01

- shipped as Mbt.3.0.tar.gz
[2007-12-03: Ko vd Sloot]
- Finished packaging


mbt version 2.0.1
