@@ -35,6 +35,9 @@ int main(){
   string path = getenv( "topsrcdir" );
   MbtAPI::GenerateTagger( "-T " + path + "/example/eindh.data -s ./simple.setting " );
   MbtAPI demo( "-s ./simple.setting" );
-  cerr << demo.Tag( "dit is een test" );
+  cerr << demo.Tag( "dit is een test" ) << endl;
+  vector<TagResult> v = demo.TagLine( "Test regel 2 ." );
+  assert( v[0].assignedTag() == "N" );
+  assert( v[2].confidence() == -1 );
 }
 
